--- a/index.html
+++ b/index.html
@@ -1,185 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DropZone</title>
 
-    <!-- TODO: add meta tags -->
-    <!-- <meta name="author" content="Lorem">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tulip Retreats</title>
+
+  <!-- TODO: add meta tags -->
+  <!-- <meta name="author" content="Lorem">
     <meta name="description" content="Lorem">
     <meta name="keywords" content="Lorem"> -->
 
-    <!-- styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css">
+  <!-- styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.9.55/css/materialdesignicons.min.css"
+    integrity="sha512-vIgFb4o1CL8iMGoIF7cYiEVFrel13k/BkTGvs0hGfVnlbV6XjAA0M0oEHdWqGdAVRTDID3vIZPOHmKdrMAUChA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/style.css">
 
-    <!-- TODO: add favicon -->
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+  <!-- TODO: add favicon -->
+  <link rel="shortcut icon" href="images/samita_original_icon.png" type="image/x-icon">
 </head>
-<body>
-    <header class="container fixed-top mt-4">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">DropZone</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">tulip<strong>retreats</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <!-- <li class="nav-item active">
+                  <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Our drones
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Our realizations</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-btn btn btn-outline-light" href="#">Contact</a>
-                </li>
-              </ul>
-            </div>
-        </nav>
-    </header>
-
-    <section class="no-wrapper banner--background">
-        <div class="banner--overlay text-light d-flex flex-column align-item-center justify-content-center text-center vh-100">
-            <h1 class="display-4">Flim your event with us!</h1>
-            <p class="px-5 mx-5 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reiciendis temporibus voluptas error commodi modi molestias quia deleniti minima possimus repellendus facere, officiis corrupti omnis numquam nostrum a eius necessitatibus.</p>
-            <p class="mt-4">
-                <a href="#" class="btn btn-light">Ask for price</a>
-                <a href="#" class="btn btn-outline-light">Watch Video</a>
-            </p>
+                  <a class="nav-link" href="#">Gallery</a>
+                </li> -->
+            <li class="nav-item">
+              <a class="nav-btn btn btn-primary" href="#">Book Now</a>
+            </li>
+          </ul>
         </div>
-    </section>
+      </div>
+    </nav>
+  </header>
 
-    <section class="wrapper--features bg-light">
-        <div class="container">
-            <div class="d-flex flex-wrap text-center">
-                <div class="col-12 col-md-3">
-                    <img src="images/from-air.png" alt="image alt text" height="55">
-                    <h4 class="mt-4">From air</h4>
-                    <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <img src="images/best-drone.png" alt="image alt text" height="55">
-                    <h4 class="mt-4">Best drones</h4>
-                    <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <img src="images/speed.png" alt="image alt text" height="55">
-                    <h4 class="mt-4">Speed</h4>
-                    <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <img src="images/long-range.png" alt="image alt text" height="55">
-                    <h4 class="mt-4">Long range</h4>
-                    <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
-                </div>
-            </div>
-            <p class="text-center mt-5"><a href="#" class="btn btn-primary">Ask for price</a></p>
+  <section class="no-wrapper wrapper--banner banner--background">
+    <div class="banner--overlay vh-100">
+      <div class="container text-light d-flex flex-column align-item-center justify-content-center mh-100">
+        <div class="col-md-6">
+          <h1 class="display-1 mb-5">Recharge</h1>
+          <h2>Escape & Recharge</h2>
+          <hr>
+          <p class="mt-2">The winding and beautiful drive through the forest markes the start of your adventure.</p>
+          <p class="mt-4">
+            <!-- <a href="#" class="btn btn-light">Ask for price</a> -->
+            <a href="#" class="btn btn-outline-light">
+              <i class="mdi mdi-24px mdi-play-circle-outline"></i> Watch Video
+            </a>
+          </p>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <section class="wrapper--more-features">
-        <div class="container">
-            <div class="d-flex">
-                <div class="col-12 col-md-7 position-relative index-1">
-                    <h2>Nature from the air</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel atque eos! Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam animi laboriosam sint.</p>
-                    <ol>
-                        <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
-                        </li>
-                        <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
-                        </li>
-                        <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
-                        </li>
-                        <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
-                        </li>
-                        <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
-                        </li>
-                    </ol>
-                </div>
-                <div class="col-md-5 d-none d-md-block">
-                    <img src="images/drone.png" alt="image alt text">
-                </div>
-            </div>
+  <section class="wrapper--features">
+    <div class="container">
+      <div class="d-flex flex-wrap text-center">
+        <div class="col-12 col-md-3">
+          <!-- <img src="images/from-air.png" alt="image alt text" height="55"> -->
+          <i class="mdi mdi-36px mdi-campfire"></i>
+          <h6 class="mt-4">Fire Place</h6>
+          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-    </section>
-
-    <section class="no-wrapper bg-light">
-        <div class="d-flex flex-wrap align-items-center">
-            <div class="order-1 order-md-1 col-12 col-md-6 p-0">
-                <img src="images/foto-top.png" alt="image alt text" class="img-fluid">
-            </div>
-            <div class="order-2 order-md-2 col-12 col-md-6 p-5">
-                <h2>Nature from the air</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel atque eos! Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam animi laboriosam sint.</p>
-                <p class="mt-4">
-                    <a href="#" class="btn btn-primary">Ask for price</a>
-                </p>
-            </div>
+        <div class="col-12 col-md-3">
+          <!-- <img src="images/long-range.png" alt="image alt text" height="55"> -->
+          <i class="mdi mdi-36px mdi-shower"></i>
+          <h6 class="mt-4">Ensuite</h6>
+          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-    </section>
-
-    <section class="no-wrapper bg-light">
-        <div class="d-flex flex-wrap align-items-center">
-            <div class="order-2 order-md-1 col-12 col-md-6 p-5">
-                <h2>City from the air</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel atque eos! Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam animi laboriosam sint.</p>
-                <p class="mt-4">
-                    <a href="#" class="btn btn-primary">Ask for price</a>
-                </p>
-            </div>
-            <div class="order-1 order-md-2 col-12 col-md-6 p-0">
-                <img src="images/foto-bottom.png" alt="image alt text" class="img-fluid">
-            </div>
+        <div class="col-12 col-md-3">
+          <!-- <img src="images/best-drone.png" alt="image alt text" height="55"> -->
+          <i class="mdi mdi-36px mdi-wifi"></i>
+          <h6 class="mt-4">Wifi</h6>
+          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-    </section>
-
-    <section class="wrapper--newsletter">
-        <div class="container">
-            <div class="d-flex text-center flex-column align-items-center text-light">
-                <h2>Sign up for our newsletter</h2>
-                <form action="#" class="mt-4">
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control" placeholder="Email Address">
-                      <div class="input-group-append">
-                        <button class="btn btn-light" type="button" id="button-addon2">Button</button>
-                      </div>
-                    </div>
-                </form>
-            </div>
+        <div class="col-12 col-md-3">
+          <!-- <img src="images/speed.png" alt="image alt text" height="55"> -->
+          <i class="mdi mdi-36px mdi-kettle-steam-outline"></i>
+          <h6 class="mt-4">Coffee/Tea</h6>
+          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-    </section>
+      </div>
+      <!-- <p class="text-center mt-5"><a href="#" class="btn btn-primary">Ask for price</a></p> -->
+    </div>
+  </section>
 
-    <footer class="container py-5 text-center">
-        <p class="m-0">Copyrights &copy; 2020. All rights reserved.</p>
-    </footer>
+  <section class="no-wrapper wrapper--infomative">
+    <div class="d-flex flex-wrap align-items-center">
+      <div class="order-1 order-md-1 col-12 col-md-6 p-0">
+        <img src="images/informative-background-1.jpg" alt="image alt text" class="img-fluid">
+      </div>
+      <div class="order-2 order-md-2 col-12 col-md-6 p-5">
+        <h6>Our Retreat</h6>
+        <hr>
+        <h2>Evolving Relaxing</h2>
+        <p>Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam
+          animi laboriosam sint. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ex sint corporis
+          dolores ipsum incidunt fugit obcaecati fugiat. Rerum error illum recusandae quas sunt obcaecati laudantium
+          ullam asperiores nihil? Reprehenderit.</p>
+        <p class="mt-4">
+          <a href="#" class="btn btn-primary">Check Availability</a>
+        </p>
+      </div>
+    </div>
+  </section>
 
-    <!-- scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
+  <section class="no-wrapper wrapper--testimonial">
+    <div class="d-flex flex-wrap align-items-center">
+      <div class="order-2 order-md-1 col-12 col-md-6 p-5">
+        <div class="testimonial">
+          <span class="ratings">
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+          </span>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus suscipit sed molestiae, minima
+            eveniet iure obcaecati expedita rerum ratione quia! Mollitia, eveniet? Neque quas alias in eum blanditiis,
+            perferendis amet.</p>
+          <h6>John Doe</h6>
+        </div>
+      </div>
+      <div class="order-1 order-md-2 col-12 col-md-6 p-0">
+        <img src="images/informative-background-2.jpg" alt="image alt text" class="img-fluid">
+      </div>
+    </div>
+  </section>
+
+  <div class="wrapper--gallery gallery-1 full-width">
+    <div class="gallery--overlay"></div>
+  </div>
+
+  <section class="wrapper--contact">
+    <div class="container">
+      <div class="row">
+        <div class="col col-md-4">
+          <span class="icon"><i class="mdi mdi-24px mdi-phone"></i></span>
+          <h6>+ 11 06344 235 235</h6>
+        </div>
+        <div class="col col-md-4">
+          <span class="icon"><i class="mdi mdi-24px mdi-email"></i></span>
+          <h6>hello@redmonk.in</h6>
+        </div>
+        <div class="col col-md-4">
+          <span class="icon"><i class="mdi mdi-24px mdi-map-marker"></i></span>
+          <h6>Pala Emino, Furnace, <br>Machigendo SY30, Wales</h6>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="wrapper--newsletter">
+    <div class="container">
+      <div class="d-flex text-center flex-column align-items-center text-light">
+        <h6 class="text-primary">Newsletter</h6>
+        <h2>Sign up for latest updates</h2>
+        <form action="#">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Email Address">
+            <div class="input-group-append">
+              <button class="btn btn-primary" type="button" id="button-addon2">Subscribe</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <footer class="container py-5 text-center">
+    <p class="m-0">Copyrights &copy; 2020 Redmonk Studios. All rights reserved.</p>
+  </footer>
+
+  <!-- scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
+
+  <script>
+    $(document).ready(function () {
+      $(window).scroll(function () {
+        var scroll = $(window).scrollTop();
+
+        if (scroll >= 100) {
+          $(".navbar").addClass("bg-white");
+          $(".navbar").addClass("shadow-lg");
+          $(".navbar").removeClass("bg-transparent");
+          $(".navbar-brand").addClass("text-primary");
+        } else {
+          $(".navbar").addClass("bg-transparent");
+          $(".navbar").removeClass("bg-white");
+          $(".navbar").removeClass("shadow-lg");
+          $(".navbar-brand").removeClass("text-primary");
+        }
+      });
+    });
+  </script>
 </body>
+
 </html>
