--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tulip Retreats</title>
 
-  <!-- TODO: add meta tags -->
-  <!-- <meta name="author" content="Lorem">
-    <meta name="description" content="Lorem">
-    <meta name="keywords" content="Lorem"> -->
+  <!-- TODO: Add Meta Tags -->
+  <!-- <meta name="author" content="Samita Mondal">
+    <meta name="description" content="Template created by Samita Monda, CEO & Founder at Redmonk Studios">
+    <meta name="keywords" content="samita, littlemissbot, samita mondal, samitalinx, connect2samita, redmonk, redmonk studios, web developer, freelancer"> -->
 
-  <!-- styles -->
+  <!-- STYLESHEETS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.9.55/css/materialdesignicons.min.css"
     integrity="sha512-vIgFb4o1CL8iMGoIF7cYiEVFrel13k/BkTGvs0hGfVnlbV6XjAA0M0oEHdWqGdAVRTDID3vIZPOHmKdrMAUChA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="styles/custom.css">
 
-  <!-- TODO: add favicon -->
+  <!-- TODO: Add Favicon -->
   <link rel="shortcut icon" href="images/samita_original_icon.png" type="image/x-icon">
 </head>
 
@@ -29,24 +29,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">tulip<strong>retreats</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <!-- <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Gallery</a>
-                </li> -->
             <li class="nav-item">
-              <a class="nav-btn btn btn-primary" href="#">Book Now</a>
+              <button class="nav-btn btn btn-primary" type="button" data-toggle="modal" data-target="#contactModal">Book Now</button>
             </li>
           </ul>
         </div>
@@ -61,12 +48,12 @@
           <h1 class="display-1 mb-5">Recharge</h1>
           <h2>Escape & Recharge</h2>
           <hr>
-          <p class="mt-2">The winding and beautiful drive through the forest markes the start of your adventure.</p>
+          <p class="mt-2">The winding and beautiful drive through the forest markes the start of your
+            adventure.</p>
           <p class="mt-4">
-            <!-- <a href="#" class="btn btn-light">Ask for price</a> -->
-            <a href="#" class="btn btn-outline-light">
+            <button class="btn btn-outline-light" type="button" data-toggle="modal" data-target="#videoModal">
               <i class="mdi mdi-24px mdi-play-circle-outline"></i> Watch Video
-            </a>
+            </button>
           </p>
         </div>
       </div>
@@ -76,74 +63,40 @@
   <section class="wrapper--features">
     <div class="container">
       <div class="d-flex flex-wrap text-center">
-        <div class="col-12 col-md-3">
-          <!-- <img src="images/from-air.png" alt="image alt text" height="55"> -->
+        <div class="col-md-3 col-6 mb-3">
           <i class="mdi mdi-36px mdi-campfire"></i>
           <h6 class="mt-4">Fire Place</h6>
-          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-        <div class="col-12 col-md-3">
-          <!-- <img src="images/long-range.png" alt="image alt text" height="55"> -->
+        <div class="col-md-3 col-6 mb-3">
           <i class="mdi mdi-36px mdi-shower"></i>
           <h6 class="mt-4">Ensuite</h6>
-          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-        <div class="col-12 col-md-3">
-          <!-- <img src="images/best-drone.png" alt="image alt text" height="55"> -->
+        <div class="col-md-3 col-6 mb-3">
           <i class="mdi mdi-36px mdi-wifi"></i>
           <h6 class="mt-4">Wifi</h6>
-          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
-        <div class="col-12 col-md-3">
-          <!-- <img src="images/speed.png" alt="image alt text" height="55"> -->
+        <div class="col-md-3 col-6 mb-3">
           <i class="mdi mdi-36px mdi-kettle-steam-outline"></i>
           <h6 class="mt-4">Coffee/Tea</h6>
-          <!-- <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p> -->
         </div>
       </div>
-      <!-- <p class="text-center mt-5"><a href="#" class="btn btn-primary">Ask for price</a></p> -->
     </div>
   </section>
 
   <section class="no-wrapper wrapper--infomative">
     <div class="d-flex flex-wrap align-items-center">
-      <div class="order-1 order-md-1 col-12 col-md-6 p-0">
+      <div class="order-1 order-md-1 col-lg-6 col-md-12 p-0">
         <img src="images/informative-background-1.jpg" alt="image alt text" class="img-fluid">
       </div>
-      <div class="order-2 order-md-2 col-12 col-md-6 p-5">
+      <div class="order-2 order-md-2 col-lg-6 col-md-12 p-5">
         <h6>Our Retreat</h6>
-        <hr>
         <h2>Evolving Relaxing</h2>
-        <p>Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam
-          animi laboriosam sint. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ex sint corporis
-          dolores ipsum incidunt fugit obcaecati fugiat. Rerum error illum recusandae quas sunt obcaecati laudantium
-          ullam asperiores nihil? Reprehenderit.</p>
+        <p>Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum
+          magni totam
+          animi laboriosam sint. Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
         <p class="mt-4">
-          <a href="#" class="btn btn-primary">Check Availability</a>
+          <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#contactModal">Check Availability</button>
         </p>
-      </div>
-    </div>
-  </section>
-
-  <section class="no-wrapper wrapper--testimonial">
-    <div class="d-flex flex-wrap align-items-center">
-      <div class="order-2 order-md-1 col-12 col-md-6 p-5">
-        <div class="testimonial">
-          <span class="ratings">
-            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
-            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
-            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
-            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
-            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
-          </span>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus suscipit sed molestiae, minima
-            eveniet iure obcaecati expedita rerum ratione quia! Mollitia, eveniet? Neque quas alias in eum blanditiis,
-            perferendis amet.</p>
-          <h6>John Doe</h6>
-        </div>
-      </div>
-      <div class="order-1 order-md-2 col-12 col-md-6 p-0">
-        <img src="images/informative-background-2.jpg" alt="image alt text" class="img-fluid">
       </div>
     </div>
   </section>
@@ -152,18 +105,87 @@
     <div class="gallery--overlay"></div>
   </div>
 
+  <section class="no-wrapper wrapper--testimonial">
+    <div class="d-flex flex-wrap align-items-center">
+      <div class="order-1 order-md-1 col-lg-6 col-md-12 col-sm-12 col-12 p-5">
+        <div class="testimonial">
+          <span class="ratings">
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+            <i class="mdi mdi-24px mdi-heart-circle-outline"></i>
+          </span>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus suscipit sed
+            molestiae, minima
+            eveniet iure obcaecati expedita rerum ratione quia! Mollitia, eveniet? Neque quas alias in eum
+            blanditiis,
+            perferendis amet.</p>
+          <h6>John Doe</h6>
+        </div>
+      </div>
+      <div class="order-2 order-md-2 col-lg-6 col-md-12 col-sm-12 col-12 p-0">
+        <img src="images/informative-background-2.jpg" alt="image alt text" class="img-fluid">
+      </div>
+    </div>
+  </section>
+
+  <section class="wrapper--experiences">
+    <div class="container">
+      <div class="text-center">
+        <h6>Experiences</h6>
+        <h2>World-Class Sea Adventures</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+          <div class="experience-img p-2">
+            <img src="images/experience-1.jpg" alt="Campfire" class="img-fluid">
+          </div>
+          <div class="p-3">
+            <h5>Campfire</h5>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatibus odit
+              sequi eos corporis?</p>
+            <p class="small"><a href="#">Read More</a></p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+          <div class="experience-img p-2">
+            <img src="images/experience-2.jpg" alt="Trekking" class="img-fluid">
+          </div>
+          <div class="p-3">
+            <h5>Trekking</h5>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatibus odit
+              sequi eos corporis?</p>
+            <p class="small"><a href="#">Read More</a></p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+          <div class="experience-img p-2">
+            <img src="images/experience-3.jpg" alt="Kayaking" class="img-fluid">
+          </div>
+          <div class="p-3">
+            <h5>Kayaking</h5>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae voluptatibus odit
+              sequi eos corporis?</p>
+            <p class="small"><a href="#">Read More</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="wrapper--contact">
     <div class="container">
       <div class="row">
-        <div class="col col-md-4">
+        <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
           <span class="icon"><i class="mdi mdi-24px mdi-phone"></i></span>
           <h6>+ 11 06344 235 235</h6>
         </div>
-        <div class="col col-md-4">
+        <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
           <span class="icon"><i class="mdi mdi-24px mdi-email"></i></span>
           <h6>hello@redmonk.in</h6>
         </div>
-        <div class="col col-md-4">
+        <div class="col col-lg-4 col-md-12 col-sm-12 col-12">
           <span class="icon"><i class="mdi mdi-24px mdi-map-marker"></i></span>
           <h6>Pala Emino, Furnace, <br>Machigendo SY30, Wales</h6>
         </div>
@@ -192,31 +214,59 @@
     <p class="m-0">Copyrights &copy; 2020 Redmonk Studios. All rights reserved.</p>
   </footer>
 
-  <!-- scripts -->
+  <!-- MODAL -->
+  <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="contactModalLabel">Contact Us</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="inputEmail">Email address</label>
+              <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="inputMessage">Message</label>
+              <textarea id="inputMessage" cols="30" rows="10" class="form-control"></textarea>
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="inputTerms" checked>
+              <label class="form-check-label" for="inputTerms">I agree to the Terms of Use</label>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Send Message</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center">
+        <video width="100%" height="380" controls>
+          <source src="videos/video.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
+  </div>
+
+  <!-- JAVASCRIPT -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
-
-  <script>
-    $(document).ready(function () {
-      $(window).scroll(function () {
-        var scroll = $(window).scrollTop();
-
-        if (scroll >= 100) {
-          $(".navbar").addClass("bg-white");
-          $(".navbar").addClass("shadow-lg");
-          $(".navbar").removeClass("bg-transparent");
-          $(".navbar-brand").addClass("text-primary");
-        } else {
-          $(".navbar").addClass("bg-transparent");
-          $(".navbar").removeClass("bg-white");
-          $(".navbar").removeClass("shadow-lg");
-          $(".navbar-brand").removeClass("text-primary");
-        }
-      });
-    });
-  </script>
+  <script src="scripts/custom.js"></script>
 </body>
 
 </html>
