Add documentation and upadte favicon and folder structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tulip Retreats</title>
+
+  <!-- TODO: Add Page Title -->
+  <title>Tulip Retreats | Responsive HTML Template</title>
 
   <!-- TODO: Add Meta Tags -->
   <!-- <meta name="author" content="Samita Mondal">
@@ -21,7 +23,7 @@
   <link rel="stylesheet" href="styles/custom.css">
 
   <!-- TODO: Add Favicon -->
-  <link rel="shortcut icon" href="images/samita_original_icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -86,7 +88,7 @@
   <section class="no-wrapper wrapper--infomative">
     <div class="d-flex flex-wrap align-items-center">
       <div class="order-1 order-md-1 col-lg-6 col-md-12 p-0">
-        <img src="images/informative-background-1.jpg" alt="image alt text" class="img-fluid">
+        <img src="images/informative-background-1.jpg" alt="Photos by Creators on Unsplash" class="img-fluid">
       </div>
       <div class="order-2 order-md-2 col-lg-6 col-md-12 p-5">
         <h6>Our Retreat</h6>
@@ -125,7 +127,7 @@
         </div>
       </div>
       <div class="order-2 order-md-2 col-lg-6 col-md-12 col-sm-12 col-12 p-0">
-        <img src="images/informative-background-2.jpg" alt="image alt text" class="img-fluid">
+        <img src="images/informative-background-2.jpg" alt="Photos by Creators on Unsplash" class="img-fluid">
       </div>
     </div>
   </section>
@@ -139,7 +141,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 col-12">
           <div class="experience-img p-2">
-            <img src="images/experience-1.jpg" alt="Campfire" class="img-fluid">
+            <img src="images/experience-1.jpg" alt="Photos by Creators on Unsplash Campfire" class="img-fluid">
           </div>
           <div class="p-3">
             <h5>Campfire</h5>
@@ -150,7 +152,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-12">
           <div class="experience-img p-2">
-            <img src="images/experience-2.jpg" alt="Trekking" class="img-fluid">
+            <img src="images/experience-2.jpg" alt="Photos by Creators on Unsplash Trekking" class="img-fluid">
           </div>
           <div class="p-3">
             <h5>Trekking</h5>
@@ -161,7 +163,7 @@
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-12">
           <div class="experience-img p-2">
-            <img src="images/experience-3.jpg" alt="Kayaking" class="img-fluid">
+            <img src="images/experience-3.jpg" alt="Photos by Creators on Unsplash Kayaking" class="img-fluid">
           </div>
           <div class="p-3">
             <h5>Kayaking</h5>
