Add CTA section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 
   <section class="wrapper--gallery gallery-1 full-width">
     <div class="gallery--overlay"></div>
+    <h2 class="text-center">Book now and Save 25%</h2>
+    <p class="text-center">FREE! 30 days cancellation.</p>
+    <p class="mt-4">
+      <button class="btn btn-light" type="button" data-toggle="modal" data-target="#contactModal">Book Now</button>
+    </p>
   </section>
 
   <section class="no-wrapper wrapper--testimonial">
