Update design on dropzone template make it more responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DropZone</title>
+    <title>Dropzone.</title>
 
     <!-- TODO: add meta tags -->
     <!-- <meta name="author" content="Lorem">
@@ -12,15 +12,15 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <!-- TODO: add favicon -->
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="container fixed-top mt-4">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">DropZone</a>
+            <a class="navbar-brand" href="javascript:void(0);">Dropzone.</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,30 +28,30 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="javascript:void(0);">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="javascript:void(0);">Pricing</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="javascript:void(0);" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Our drones
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="javascript:void(0);">Mavic Series</a>
+                    <a class="dropdown-item" href="javascript:void(0);">Phantom Series</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="javascript:void(0);">More Products</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Our realizations</a>
+                  <a class="nav-link" href="javascript:void(0);">Our realizations</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-btn btn btn-outline-light" href="#">Contact</a>
+                  <a class="nav-btn btn btn-primary" href="javascript:void(0);">Enquire</a>
                 </li>
               </ul>
             </div>
@@ -61,10 +61,10 @@
     <section class="no-wrapper banner--background">
         <div class="banner--overlay text-light d-flex flex-column align-item-center justify-content-center text-center vh-100">
             <h1 class="display-4">Flim your event with us!</h1>
-            <p class="px-5 mx-5 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reiciendis temporibus voluptas error commodi modi molestias quia deleniti minima possimus repellendus facere, officiis corrupti omnis numquam nostrum a eius necessitatibus.</p>
+            <p class="px-5 mx-5 mt-2">The best drone technology for every type of user and shooting scenario. If you are looking for a beginner drone, professional drone, or simply want to upgrade to the latest technology, it’s time to discover.</p>
             <p class="mt-4">
-                <a href="#" class="btn btn-light">Ask for price</a>
-                <a href="#" class="btn btn-outline-light">Watch Video</a>
+                <a href="javascript:void(0);" class="btn btn-light m-1">Check Pricing</a>
+                <a href="javascript:void(0);" class="btn btn-outline-light m-1">Watch Video</a>
             </p>
         </div>
     </section>
@@ -72,28 +72,28 @@
     <section class="wrapper--features bg-light">
         <div class="container">
             <div class="d-flex flex-wrap text-center">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <img src="images/from-air.png" alt="image alt text" height="55">
                     <h4 class="mt-4">From air</h4>
                     <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <img src="images/best-drone.png" alt="image alt text" height="55">
                     <h4 class="mt-4">Best drones</h4>
                     <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <img src="images/speed.png" alt="image alt text" height="55">
                     <h4 class="mt-4">Speed</h4>
                     <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                     <img src="images/long-range.png" alt="image alt text" height="55">
                     <h4 class="mt-4">Long range</h4>
                     <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusantium..</p>
                 </div>
             </div>
-            <p class="text-center mt-5"><a href="#" class="btn btn-primary">Ask for price</a></p>
+            <p class="text-center mt-5"><a href="javascript:void(0);" class="btn btn-primary">Check Pricing</a></p>
         </div>
     </section>
 
@@ -101,23 +101,23 @@
         <div class="container">
             <div class="d-flex">
                 <div class="col-12 col-md-7 position-relative index-1">
-                    <h2>Nature from the air</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel atque eos! Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam animi laboriosam sint.</p>
+                    <h2>Visionary Intelligence. Elevated Imagination.</h2>
+                    <p>Featuring a 1-inch CMOS sensor that can shoot 4K/60fps videos and 20MP photos, the Phantom 4 Pro V2.0 grants filmmakers absolute creative freedom. The OcuSync 2.0 HD transmission system ensures stable connectivity and reliability, five directions of obstacle sensing ensures additional safety, and a dedicated remote controller with a built-in screen grants even greater precision and control. [1] A wide array of intelligent features makes flying that much easier. The Phantom 4 Pro V2.0 is a complete aerial imaging solution, designed for the professional creator.</p>
                     <ol>
                         <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
+                            <p>Powerful Aerial Performance</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
+                            <p>Professional 4K Video</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
+                            <p>Precise Mechanical Shutter</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
+                            <p>Powerful Flight Performance</p>
                         </li>
                         <li>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit consequatur atque distinctio vitae quaerat ratione fuga iure.</p>
+                            <p>Comprehensive Flight Safety</p>
                         </li>
                     </ol>
                 </div>
@@ -134,10 +134,10 @@
                 <img src="images/foto-top.png" alt="image alt text" class="img-fluid">
             </div>
             <div class="order-2 order-md-2 col-12 col-md-6 p-5">
-                <h2>Nature from the air</h2>
+                <h2>Powerful Aerial Performance</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel atque eos! Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam animi laboriosam sint.</p>
                 <p class="mt-4">
-                    <a href="#" class="btn btn-primary">Ask for price</a>
+                    <a href="javascript:void(0);" class="btn btn-primary">Buy Now</a>
                 </p>
             </div>
         </div>
@@ -146,10 +146,10 @@
     <section class="no-wrapper bg-light">
         <div class="d-flex flex-wrap align-items-center">
             <div class="order-2 order-md-1 col-12 col-md-6 p-5">
-                <h2>City from the air</h2>
+                <h2>Professional 4K Video</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel atque eos! Quidem non voluptas, sit corrupti excepturi cum, laborum, quibusdam fugit enim possimus earum magni totam animi laboriosam sint.</p>
                 <p class="mt-4">
-                    <a href="#" class="btn btn-primary">Ask for price</a>
+                    <a href="javascript:void(0);" class="btn btn-primary">Buy Now</a>
                 </p>
             </div>
             <div class="order-1 order-md-2 col-12 col-md-6 p-0">
@@ -166,7 +166,7 @@
                     <div class="input-group mb-3">
                       <input type="text" class="form-control" placeholder="Email Address">
                       <div class="input-group-append">
-                        <button class="btn btn-light" type="button" id="button-addon2">Button</button>
+                        <button class="btn btn-light" type="button" id="button-addon2">Subscribe</button>
                       </div>
                     </div>
                 </form>
@@ -175,11 +175,12 @@
     </section>
 
     <footer class="container py-5 text-center">
-        <p class="m-0">Copyrights &copy; 2020. All rights reserved.</p>
+        <p class="m-0">Copyrights &copy; 2020 Redmonk Studios. All rights reserved.</p>
     </footer>
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
